Fixed spacing for home, added image for new card.

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,8 +1,9 @@
 .home-main {
-  margin: 5%;
+  margin: 5% auto;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  max-width: 1500px;
 }
 
 .home-text {
